--- a/testing.html
+++ b/testing.html
@@ -5,7 +5,7 @@
 <title>Purchase Request Form</title>
     <link rel="icon" type="image/png" href="favicon.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="purchase_request_style.css">
+<link rel="stylesheet" href="testing.css">
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -262,7 +262,7 @@
 <button type="button" class="back-button" onclick="window.location.href='dashboard.html'">Back to Dashboard</button>
 </form>
 </div>
-<script src="purchase_request_script.js"></script>
+<script src="testing.js"></script>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         // Display logged-in user email
