--- a/testing.html
+++ b/testing.html
@@ -44,6 +44,14 @@
       </li>
       <li><a href="#" data-content="dashboard">Dashboard</a></li>
     </ul>
+
+<!-- Hidden Menus -->
+<li class="hidden-menu" data-menu="HRD" style="display: none;"><a href="hrd.html">HRD</a></li>
+<li class="hidden-menu" data-menu="Administration" style="display: none;"><a href="administration.html">Administration</a></li>
+<li class="hidden-menu" data-menu="IT" style="display: none;"><a href="it.html">IT</a></li>
+<li class="hidden-menu" data-menu="Maintenance" style="display: none;"><a href="maintenance.html">Maintenance</a></li>
+
+    
     <div class="user-area">
       <span id="user-email-display"></span>
       <button class="logout-button" id="logout-btn">Logout</button>
